# prgv

./: .gitignore  pyproject.toml
prgv/: main.py
prgv/cmd/: register.py  validate.py
prgv/lib/: args.py  consts.py  pref.py  schema.py
schema/: schema.json
